upgrade version to 1.0.3
